--- a/eloadas_20111025/main.tex
+++ b/eloadas_20111025/main.tex
@@ -49,8 +49,7 @@
     \item Every "nice" tiling has a corresponding D-symbol which is unambigous
       up to permutation \mode<article>{"Nice" tilings are the ones, whose
       baricentric subdivision has finitely many simplex-orbits and does not have
-      ideal simplex-vertices except for "real" vertices or "domain-center"
-      vertices.  FIXME pontos kifejezesek}
+      ideal simplex-vertices except for 0-center or 3-center vertices.}
   \end{itemize}
 \end{frame}
 
