--- a/Alkalmazott_mat_lapok/cikk.tex
+++ b/Alkalmazott_mat_lapok/cikk.tex
@@ -25,6 +25,8 @@
 
 \section{Bevezetés}
 
+\section{FIXME Térkitöltésről általában}
+
 \section{D-szimbólum konstrukció adott térkitöltés alapján}
 \subsection{Általános feltételek}
 \subsubsection{Diagram}
