--- a/eloadas_20111025/main.tex
+++ b/eloadas_20111025/main.tex
@@ -411,7 +411,7 @@ tiling.
 \begin{frame}
   \nocite{DHM93,D87,Du88,H93,LM90,Ma67,M94,T82,VS93,F94,F03}
   \bibliographystyle{plain}
-  \mode<presentation>{\fontsize{5pt}}
+  \mode<presentation>{\fontsize{5pt}{0}}
   \bibliography{dsym}
 \end{frame}
 
