--- a/Alkalmazott_mat_lapok/cikk.tex
+++ b/Alkalmazott_mat_lapok/cikk.tex
@@ -39,7 +39,7 @@
   Alapvető célunk a 3 dimenziós D-szimbólumok algoritmikus felsorolása, illetve
   a hozzájuk tartozó lehetséges kövezések minél részletesebb jellemzése.
   Végtelen sok D-szimbólum van rögzített dimenzióban is, ezért bemutatunk egy
-  olyan megszorítási lehetőséget is, ami garantálja a véges sok esetet, de
+  olyan megszorítási lehetőséget, ami garantálja a véges sok esetet, de
   továbbra is érdekes. Általános esetben jelenleg legfeljebb 12, éltranzitív
   esetben a 24-ből legfeljebb 18 elemű D-szimbólumokat tudjuk felsorolni.
 
